# libgesture

./: CMakeLists.txt  README  config.h.in
libgesture/: CMakeLists.txt
libgesture/include/: depthimage.h  face.h  facedetector.h  facelist.h  gesturecontext.h  greyscaleimage.h  lgfreenectdevice.h  lgimage.h  libfreenect.hpp  libgesture.h  mutex.h  pollingthread.h  rgbimage.h
libgesture/src/: depthimage.cpp  face.cpp  facedetector.cpp  facelist.cpp  gesturecontext.cpp  greyscaleimage.cpp  lgfreenectdevice.cpp  lgimage.cpp  libgesture.cpp  mutex.cpp  pollingthread.cpp  rgbimage.cpp
test_env/: CMakeLists.txt
test_env/src/: te.cpp  te.cpp.orig
